test/src/scss/universal.scss
/* universal styles | applied to all pages*/

@import url('https://fonts.googleapis.com/css2?family=Lato&family=MuseoModerno:wght@300&family=Oxanium:wght@300;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap');

/* FONTS: Lato: Text, MuseoModerno: Title, Oxanium: Logo, */


/*-------------------------------------------------\
    0 - General Styles                             \
    1 - Scroll Bar                                 \
    2 - Presets (Noscroll, Center, pop-ups, etc.)  \
    3 - Top Nav Bar                                \
    4 - Flags/Language Selection                   \
    5 - PCARAMORI Logo                             \ 
    6 - Big fullscreen Nav                         \
    6.5 - Nav transition between pages             \
    7 - Icons                                      \
    8 - Footer                                     \
    9 - Sizing                                     \
--------------------------------------------------*/


/*--------------
0. GENERAL STYLES
--------------*/

* {
    margin: 0;
    padding: 0;
}

body,
html {
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
}

h1,
h2,
h3,
h4,
h5 {
    color: var(--main-text-color);
    font-family: MuseoModerno, sans-serif;
}

p {
    color: var(--main-text-color);
}

a {
    text-decoration: none;
}

p>a {
    color: var(--orange-1);
    text-decoration: underline;
}

li>a {
    text-decoration: underline;
}

p>a:hover,
.footer a:hover {
    color: var(--orange-2) !important;
    transition: 0.25s;
}


/*--------------
1. SCROLL BAR
---------------*/

::-webkit-scrollbar {
    width: 12px;
    opacity: 0;
    z-index: 4;
}

::-webkit-scrollbar-track {
    background-color: var(--gray-2);
    border-radius: 0.1rem;
}

::-webkit-scrollbar-thumb {
    background: var(--orange-1);
    border-radius: 0.2rem;
}

::-webkit-scrollbar-thumb:hover {
    background: var(--orange-2);
}


/*-------------- 
2. PRESETS 
--------------*/

.noscroll {
    overflow: hidden;
}

.noscroll::-webkit-scrollbar {
    visibility: hidden;
}

.outline {
    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
}

.flex-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.space-around {
    justify-content: space-around;
}

.flex-center h1 {
    align-self: center;
}

.float-left {
    float: left;
}

.float-right {
    float: right;
}

.highlight {
    background-color: var(--orange-2);
}

.sticky {
    position: sticky;
    top: 0;
}

.content {
    font-size: 1.3rem;
}

.initial .big-initial-letter {
    font-size: 2rem;
}

.round-profile-picture {
    border-radius: 50%;
    max-height: 250px;
    height: 25vw;
    max-width: 250px;
    width: 25vw;
    float: left;
    background-color: white;
    margin-right: 20px;
    margin-bottom: 10px;
}

.content h1,
h2,
h3,
h4 {
    text-align: center;
    color: var(--blue-purple)
}


/*pop-ups*/

.pop-up {
    background-color: rgb(199, 199, 199);
    color: rgb(34, 38, 41);
    width: 400px;
    height: 300px;
    border-radius: 5px;
    position: absolute;
    z-index: 1000;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-family: system-ui;
    padding: 50px;
    text-align: center;
}

.pop-up hr {
    width: 400px;
    height: 5px;
    margin-bottom: 20px;
    background-color: rgb(150, 150, 150);
    border: none;
    outline: none;
}

.pop-up h1 {
    margin-bottom: 30px;
}

.pop-up p {
    font-size: 18px;
}


/*colors*/

.orange {
    color: var(--orange-1);
}

.purple {
    color: var(--purple-1);
}

.blue {
    color: var(--blue-1);
}

.green {
    color: var(--green-1);
}

.orange-pink {
    background-image: var(--orange-pink);
}

.blue-purple {
    background-image: var(--blue-purple);
}

.green-blue {
    background-image: var(--green-blue);
}


/*content*/

.content {
    margin-top: 5%;
    margin-bottom: 5%;
    font-family: Lato, Roboto, Arial, sans-serif;
    margin-left: 10%;
    margin-right: 10%;
    color: var(--main-text-color);
    text-align: justify;
    display: flex;
    justify-content: center;
    align-items: center;
}

.flex-container {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.flex-column {
    margin-top: 20px;
}

.flex-column p {
    font-size: 1.3rem;
}

.flex-column h2 {
    font-style: 1.5rem;
    color: var(--purple-pastel)
}

.flex-shrink-container {
    display: flex;
    max-width: 1750px;
    flex-shrink: 1;
    flex-grow: 1;
    flex-direction: column;
}


/*-------------- 
3. TOP NAV BAR
--------------*/

.nav-left {
    margin-left: 1rem;
}

.nav-right {
    margin-right: 1rem;
}

.navbar {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    display: flex;
    justify-content: space-between;
    width: 100vw;
    height: 3rem;
    background: linear-gradient(0deg, rgba(15, 22, 24, 0) 0%, rgba(15, 22, 24, 1) 100%);
    z-index: 100;
}


/*TRANSPARENT NAV IS DEFINED IN MEDIA QUERIES*/


/*-------------- 
4. FLAGS 
--------------*/

.flags img {
    height: 50px;
    margin: 4px;
    cursor: pointer;
    z-index: 2;
}

.flags {
    position: absolute;
    right: 10px;
    bottom: 5px;
}


/*-------------- 
5. LOGO 
--------------*/

.logo {
    font-family: Oxanium, sans-serif;
    color: white;
    font-size: 2rem;
    border: 0.3rem solid white;
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 0.7rem;
    padding-right: 0.7rem;
    cursor: pointer;
    font-weight: 400;
}

.logo-hover:hover {
    color: var(--green-pastel);
    border: 0.3rem solid var(--blue-pastel);
    transition: ease-out 0.6s;
}


/*--------------
6. BIG NAV
--------------*/

.nav-window {
    display: none;
    height: 100vh;
    width: 100vw;
    z-index: 100;
    opacity: 0.985;
    position: absolute;
    background-image: var(--green-blue);
}

.nav-item {
    font-family: MuseoModerno, sans-serif;
    cursor: pointer;
    transition: ease-out 0.25s;
    color: var(--green-1);
    text-decoration: none;
    padding-bottom: 0.25rem;
    padding-top: 0.25rem;
    border: 0.25rem solid transparent;
    font-size: 2rem;
}

.nav-item:hover {
    opacity: 1;
    border: 0.25rem solid transparent;
    border-image: linear-gradient(to top, var(--orange-2), rgba(0, 0, 0, 0)) 1 100%; //DECIDE ON THIS | EITHER ORANGE-2 OR GREEN-2
    font-size: 40px;
}

.active-nav-item {
    color: var(--orange-1);
}

.nav-window hr {
    /*or .menu-line*/
    width: 30%;
    text-align: right;
    opacity: 0;
    flex: none;
    position: block;
    height: 0.2rem;
    border: 0;
    background-color: var(--green-1);
}


/*-------------- 
6. Nav transition between pages 
---------------*/

.link-transition {
    height: 100vh;
    width: 100vw;
    background-color: black;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1000;
    animation: black-slide-animation 0.3s ease-in;
}

@keyframes black-slide-animation {
    0% {
        transform: translate(-50%, 50%);
    }
}

@keyframes black-slide-animation-back {
    0% {
        transform: translate(-50%, -50%);
    }
    100% {
        transform: translate(-50%, -150%);
    }
}

.link-transition-out {
    animation: black-slide-animation-back 0.5s ease-in !important;
}


/*-------------- 
7. ICONS 
---------------*/

.fa-bars {
    /*hamburger / menu bars*/
    font-size: 3rem;
    color: var(--gray-1);
    cursor: pointer;
}

.fa-times {
    /*cross / X */
    font-size: 2.5rem;
    display: none;
    color: var(--orange-1);
    cursor: pointer;
    z-index: 4;
}


/*-------------- 
8. FOOTER 
--------------*/

.footer {
    background-color: var(--gray-2);
    display: flex;
    justify-content: space-around;
    font-family: lato, arial, sans-serif, ;
}

.footer li {
    margin: 5px;
    list-style: none;
    text-align: center;
}

.footer li a {
    font-family: lato;
    color: var(--light-gray-1);
}

.footer h2 {
    margin-bottom: 20px;
    color: white;
    text-decoration: underline;
    font-family: Lato, sans-serif;
    text-align: center;
}

.footer .text-col {
    width: 150px;
}

.footer .icon-col {
    width: 50px;
    flex-direction: column;
    display: flex;
    align-items: center;
    justify-content: space-between;
    // align-self: center;
}

.footer .icon-col .footer-icon{
    font-size: 40px;
    color: var(--footer-text-color);
}

.copyright {
    color: var(--light-gray-2);
    background-color: var(--gray-2);
    text-align: right;
    padding-top: 20px;
    padding-right: 10px;
    padding-bottom: 10px;
    font-family: museomoderno;
}

#footer-svg {
    margin-bottom: -3%;
    width: 100vw;
}

